# pog

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  main.go
client/: Cargo.toml  Dockerfile
client/dto_payloads/: gemini_response.json  tldr_request.json
client/src/: discord_client.rs  error.rs  gemini_client.rs  gemini_dtos.rs  main.rs  snark.rs  tldr.rs
commands/: Cargo.toml
commands/dtos/: global_commands.json
commands/src/: client.rs  commands.rs  main.rs
common/: Cargo.toml
common/dto_payloads/: update_message.json
common/src/: commands.rs  discord_client.rs  discord_id.rs  error.rs  events.rs  lib.rs
common/src/repos/: admin_repository.rs  attendance_record.rs  attendance_repository.rs  channel_comment_repository.rs  mod.rs  postgres_admin_repository.rs  postgres_attendance_repo.rs  postgres_channel_comment_repository.rs  postgres_wager_repository.rs  postgres_whois_repository.rs  wager_repository.rs  whois_repository.rs
components/: application.go  discord_request.go  discord_request_test.go  discord_response.go  discord_response_test.go  in_mem_repo_test.go  postgres_repo.go  postgres_repo_test.go  repository.go  routing.go  verify.go  verify_test.go  wager.go
db/: V1__create_wager_table.sql  V2__initial_wagers.sql  init.sql
discord_api/: Cargo.toml
discord_api/src/: error.rs  lib.rs
discord_api/src/interaction_request/: guild_member.rs  interaction_data.rs  interaction_data_option.rs  interaction_object.rs  message_component.rs  message_object.rs  mod.rs  resolved_data.rs  user.rs
discord_api/src/interaction_response/: allowed_mention.rs  attachment.rs  component.rs  embed.rs  interaction_callback.rs  interaction_callback_data.rs  interaction_response_object.rs  message_flags.rs  (+2 more)
dto_payloads/: T20_list_bets_request.json  T30_request_payout.json  T31_selected_bet_to_close_request.json  bet_modal_request.json  ping_request.json  request.json  select_option_request.json
gateway/: Cargo.toml  Dockerfile  continuous.sh
gateway/dto_payloads/: guild_create.json  guild_member_add.json  hello_event.json  message_create.json  message_delete.json  message_reaction_add.json  message_update.json  ready_event.json  resume_event.json  typing_start.json
gateway/src/: discord_client.rs  error.rs  gemini_dtos.rs  heartbeat.rs  inbound_payloads.rs  main.rs  message_processor.rs  payloads.rs  snark.rs  summarizer.rs  tldr.rs
infrastructure/: infrastructure.yaml  instances.yaml  lambda.yaml
infrastructure/aws/: instances.yaml
infrastructure/gcp/: common.sh  deploy_client.sh  deploy_gateway.sh  deploy_local_gateway.sh  deploy_local_service.sh  deploy_server.sh  prepare_environment.sh
manage/: README.md  V2__initial_wagers.sql
pog_client/: Cargo.toml
pog_client/src/: discord_client.rs  main.rs
pog_common/: Cargo.toml
pog_common/dto_payloads/: delete_message.json
pog_common/src/: discord_client.rs  events.rs  lib.rs
pog_server/: Cargo.toml
pog_server/db/: V1__create_wager_table.sql  V2__initial_wagers.sql
pog_server/dto_payloads/: T30_payout_request.json
pog_server/src/: application.rs  discord_client.rs  error.rs  main.rs  request.rs  response.rs  wager.rs  wager_repository.rs
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/db/: V1__create_wager_table.sql  _V2__initial_wagers.sql
server/db/migrations/: V10__week_17_attendance.sql  V11__week_18_attendance.sql  V12__add_season_column.sql  V13__2024_teams.sql  V14__2024_week_1_attendance.sql  V15__2024_week_2_attendance.sql  V16__2024_week_3_attendance.sql  V17__2024_week_4_attendance.sql  V18__2024_week_5_attendance.sql  V19__2024_week_6_attendance.sql  V20__2024_week_7_attendance.sql  V21__2024_week_8_attendance.sql  V22__2024_week_9_11_attendance.sql  V23__2024_week_12_attendance.sql  V24__2024_week_13_attendance.sql  V25__2024_week_14_attendance.sql  V26__2024_week_15_16_attendance.sql  V27__2024_week_17_attendance.sql  V28__2024_week_18_attendance.sql  V29__admin_settings.sql  V30__channel_comments.sql  V3__add_dates.sql  V4__ff_teams.sql  V5__week_12_attendance.sql  V6__week_13_attendance.sql  V7__week_14_attendance.sql  V8__week_15_attendance.sql  V9__week_16_attendance.sql  _V13__2024_week_1_attendance.sql
server/dto_payloads/: 2025_03_20_settlement_bug.json  T10_initialize_bet_request.json  T11_bet_modal_request.json  T20_list_bets_request.json  T20_list_bets_request_w_no_global_user.json  T30_payout_request.json  T31_selected_bet_to_close_request.json  T31a_select_reason.json  T32_reason_selected.json  T32a_reason_selected.json  T40_attendance.json  T40_attendance_manager.json  T40_attendance_no_options.json  T40_attendance_week.json  T40_attendance_week_19.json  T60_admin_help.json  T60_admin_set_user.json  T60_admin_welcome.json  T60_admin_whois.json  T61_admin_set_user_modal.json  T70_whois.json  T70_whois_no_user.json  bet_modal_request.json  initialize_bet_request.json  interaction_request.json  ping_request.json  select_option_request.json
server/src/: application.rs  default_discord_client.rs  discord_client.rs  discord_id.rs  error.rs  main.rs  postgres_repository.rs  response.rs  verify.rs  wager.rs  wager_repository.rs
server/src/application/: app.rs  mod.rs  parse_date.rs  t10_initiate_bet.rs  t11_add_wager.rs  t20_list_bets.rs  t30_settle_bet.rs  t31_settle_bet.rs  t32_settle_bet.rs  t40_attendance.rs  t50_help.rs  t60_admin.rs  t61_admin_set_user.rs  t70_whois.rs
server/src/interactions/: mod.rs  parse_date.rs  t10_initiate_bet.rs  t11_add_wager.rs  t20_list_bets.rs  t30_settle_bet.rs  t31_settle_bet.rs  t32_settle_bet.rs  t40_attendance.rs
server/src/observe/: emf.rs  metric.rs  metric_payload.rs  mod.rs  timer.rs
server/src/repos/: attendance_record.rs  attendance_repository.rs  mod.rs  postgres_attendance_repo.rs  postgres_wager_repository.rs
server_deployment/: README.md  bastion_install.sh
src/: application.rs  default_discord_client.rs  discord_client.rs  discord_id.rs  error.rs  main.rs  postgres_repository.rs  request.rs  response.rs  verify.rs  wager.rs  wager_repository.rs
