[package]
name = "pog_client"
version = "0.1.0"
edition = "2021"

[dependencies]
pog_common = "0.1.0"

aws-config = "0.56"
aws_lambda_events = "0.11.1"
lambda_runtime = "0.8.2"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
rand = "0.8.5"
