[package]
name = "pog_common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "^0.4.20", default-features = false, features = ["clock"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls","json"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "json", "chrono"] }
tokio = { version = "1", features = ["macros"] }
#tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }

[features]
integration-tests = []