[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
pog_common = "0.1.0"
discord_api = "0.1.0"

futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls","json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
futures-channel = "0.3.29"
futures-util = "0.3.29"
chrono = "0.4.35"
async-trait = "0.1.79"

aws-config = { version = "0.57.1", optional = true }
aws-sdk-lambda = { version = "0.35.1", optional = true }

[features]
aws = [ "aws-config", "aws-sdk-lambda" ]
gcp = [ ]