[package]
name = "pog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pog_common = "0.1.0"
discord_api = "0.1.0"

aws-config = "0.57.1"
aws-sdk-sns = "0.35.0"
async-trait = "0.1"
axum = "0.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "postgres" , "runtime-tokio-rustls", "json"] }
chrono = { version = "^0.4.20", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = "0.4.4"
lambda_http = "0.8.1"
base64 = "0.21.4"

hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["std"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
ed25519 = "2.2.3"
log = "0.4.20"


[dev-dependencies]
uuid = { version = "1.3", features = ["v4"]}