[package]
name = "pog"
version = "0.1.0"
edition = "2021"

[dependencies]
pog_common = "0.1.0"
telemetry = "0.1.0"
discord_api = "0.1.0"

aws-config = "1.1.9"
aws-sdk-lambda = "1.19.0"
async-trait = "0.1"
base64 = "0.21.4"
axum = "0.6"
chrono = { version = "^0.4.20", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
ed25519 = "2.2.3"
futures = "0.3"
hex = "0.4.3"
lambda_http = "0.8.1"
once_cell = "1.18.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = "0.5"

[dev-dependencies]
uuid = { version = "1.3", features = ["v4"] }