[package]
name = "pog"
version = "0.1.0"
edition = "2021"

[dependencies]
pog_common = "0.1.0"
discord_api = "0.1.0"

chrono = { version = "^0.4.20", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
ed25519 = "2.2.3"
hex = "0.4.3"
once_cell = "1.18.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "json"] }
tokio = { version = "1", features = ["full"] }

aws-config = { version = "1.1.9", optional = true }
aws-sdk-lambda = {  version = "1.19.0", optional = true }
lambda_http = {  version = "0.8.1", optional = true }

axum = "0.6"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = {  version = "0.4", optional = true }


[features]
default = ["gcp"]
aws = [ "aws-config", "aws-sdk-lambda", "lambda_http" ]
gcp = [ "reqwest", "tower", "tower-http", "tokio/rt-multi-thread" ]
